<resources>
    <string name="app_name">Download Tools</string>
    <string name="main_list_type_mapp">Application</string>
    <string name="main_list_type_master">Firmware</string>
    <string name="dialog_warning">Prompt</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="main_view_clear">Clear device</string>
    <string name="main_plat_m">Middle</string>
    <string name="main_plat_android">High-end</string>
    <string name="main_result_unzip">Download file: Decompression:</string>
    <string name="main_result_file">Download file:</string>
    <string name="main_download_fail">\n Download failed: \n</string>
    <string name="main_tip_choose">Please select a file</string>
    <string name="main_tip_file_list">Download file list: \n</string>
    <string name="main_tip_parse_error">Resolution file error: \n</string>
    <string name="mian_tip_unonline">Not access device</string>
    <string name="file_mk_sd">Internal storage device</string>
    <string name="file_no_file">No file</string>
    <string name="main_xml_downloader">Download</string>
    <string name="main_xml_choose">Select a document</string>
    <string name="main_xml_get_app">Get application list</string>
    <string name="main_xml_file_list">Download file list:</string>
    <string name="main_xml_down_state">Download status:</string>
    <string name="main_xml_down_file">Download file:</string>
    <string name="main_xml_donw_pro">Download progress:</string>
    <string name="cancel">Stop Download</string>
    <string name="login_user">User Name</string>
    <string name="login_old_pwd">Old Pwd</string>
    <string name="login_new_pwd">New Pwd</string>
    <string name="main_xml_set">Settings </string>
    <string name="login_user_null">User name or password cannot be empty</string>
    <string name="login_user_unexit">User name does not exist</string>
    <string name="login_pwd_error">Password error</string>
    <string name="file_mk_down">Download directory</string>
    <string name="file_mk_usb">External storage </string>
    <string name="login_set">Settings </string>
    <string name="pwd_user_error">User name is incorrect </string>
    <string name="pwd_old_error">The old password cannot be empty or the length is not equal to 8</string>
    <string name="pwd_old_error1">The old password is incorrect </string>
    <string name="pwd_new_error">The new password cannot be empty or the length is not equal to 8</string>
    <string name="pwd_set_right">Modify the password successfully, please log in again</string>
    <string name="pwd_set_error">Failed to modify the password </string>
    <string name="dialog_delete">Confirm to delete the file </string>
    <string name="file_import_succ">Import the file successfully </string>
    <string name="file_importing">Is importing the file, please wait...</string>
    <string name="login_input_pwd">Please enter your password</string>
    <string name="login_in">Login</string>
    <string name="setting_import">Import file</string>
    <string name="setting_pwd">Modify password </string>
    <string name="setting_log">View log </string>
    <string name="setting_other">Other </string>
    <string name="log_admin">Administrator </string>
    <string name="log_operator">Operator</string>
    <string name="login_in_succ">Successful login </string>
    <string name="login_in_fail">Login failed </string>
    <string name="download_succ">Successfully downloaded </string>
    <string name="download_fail">Download failed</string>
    <string name="download_file">\nFile name:</string>
    <string name="download_result">\nResult:</string>
    <string name="download_clear">\nWhether to clear:</string>
    <string name="log_out">Export </string>
    <string name="file_import">Import</string>
    <string name="file_delete">Delete </string>
    <string name="file_select">Select </string>
    <string name="main_connect_device">Please connect the device first</string>
    <string name="file_not_select_file">No files selected</string>
    <string name="file_please_select_file">Please select file</string>
    <string name="setting_delete_imported_file">Delete imported file</string>
    <string name="exit_login">Exit login</string>
    <string name="exit_app">Exit APP</string>
    <string name="file_not_exsit">not exist</string>
    <string name="file_missing">Missing file</string>
    <string name="file_copy_success">Success</string>
    <string name="file_copy_fail">Fail</string>
    <string name="ok">OK</string>
    <string name="wait_for_device">Waiting for device access...</string>
    <string name="wait_for_download_end">Wait for the download process to end...</string>
    <string name="download_fail_download_again">Download failed, please download again</string>
    <string name="wait_configuring">Download completed, configuration in progress, please do not plug</string>
    <string name="userType">User Type</string>
    <string name="userType_Admin">Admin</string>
    <string name="userType_Operator">Operator</string>
    <string name="set_pwd_set_password">Set Password</string>
    <string name="set_pwd_confirm_password">Confirm Password</string>
    <string name="set_pwd_prompt">It is recommended to change the password</string>
    <string name="set_pwd_pwd_length_error">The password cannot be empty or the length is not equal to 8</string>
    <string name="set_pwd_pwd_inconsistent">The two passwords are inconsistent</string>
    <string name="file_select_please_select_list_file">Please select a .list file</string>
    <string name="toolbar_item_show_all">all</string>
    <string name="toolbar_item_show_lsit">.list</string>
    <string name="log_search">Search</string>
    <string name="log_start_date">Start date</string>
    <string name="log_end_date">End date</string>
    <string name="log_clear_date">Clear date</string>
    <string name="setting_add_user">Add user</string>
    <string name="setting_add_user_success">Add user successfully</string>
    <string name="setting_add_user_fail">Fail to add user</string>
    <string name="setting_add_user_user_exist">User already exists</string>
    <string name="userno_cannot_be_empty">The username cannot be empty</string>
    <string name="export_log_to_path">Export log to:</string>
    <string name="get_app_succ">Successfully get app</string>
    <string name="get_app_fail">Fail to get app</string>
</resources>