<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">


    <Button
        android:id="@+id/bt_import"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_import"
        style="@style/style_btn"/>

    <Button
        android:id="@+id/bt_delete_imported_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_delete_imported_file"
        style="@style/style_btn"/>


    <Button
        android:id="@+id/bt_add_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_add_user"
        style="@style/style_btn"/>

    <Button
        android:id="@+id/bt_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_pwd"
        style="@style/style_btn"/>

    <Button
        android:id="@+id/bt_log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_log"
        style="@style/style_btn"
        />

    <Button
        android:id="@+id/bt_other"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_other"
        android:visibility="gone"/>

</LinearLayout>