<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDF0F3"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:entries="@array/sp_content" />

        <Button
            android:id="@+id/bt_out"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="32dp"
            android:text="@string/log_out"
            android:background="@drawable/selector_btn_blue"
            android:textColor="@color/white"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingTop="10dp">

        <Button
            android:id="@+id/bt_date_start"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="32dp"
            android:text="@string/log_start_date"
            android:background="@drawable/selector_btn_blue"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/bt_date_end"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:background="@drawable/selector_btn_blue"
            android:text="@string/log_end_date"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/bt_clear_date"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:background="@drawable/selector_btn_blue"
            android:text="@string/log_clear_date"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <EditText
            android:id="@+id/et_search"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/bt_search"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="32dp"
            android:text="@string/log_search"
            android:background="@drawable/selector_btn_blue"
            android:textColor="@color/white"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_none"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:text="None"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>