<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_user"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/login_user"
            android:textSize="18sp"
            android:layout_gravity="center_vertical"/>

        <EditText
            android:id="@+id/ed_user"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:maxEms="12"
            android:maxLines="1"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:visibility="gone"/>

        <Spinner
            android:id="@+id/spinner_modifypwd_userno"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="48dp"
            android:layout_gravity="right|center_vertical"
            style="@style/Widget.AppCompat.Spinner.Underlined"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/text_wifi_ap_set_old_password"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/login_old_pwd"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/ed_old"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:maxEms="12"
            android:maxLines="1"
            android:maxLength="8"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/text_wifi_ap_set_new_password"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/login_new_pwd"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/ed_new"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:maxEms="12"
            android:maxLines="1"
            android:maxLength="8"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/bt_set"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        style="@style/style_btn"
        android:text="@string/login_set"/>


</LinearLayout>