<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:background="@mipmap/ic_backgroup">

<!--    <include layout="@layout/layout_toolbar"/>-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/iv_icon_left"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/file_icon_apk" />

        <ImageView
            android:id="@+id/iv_icon_centre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@mipmap/file_icon_apk" />

        <ImageView
            android:id="@+id/iv_icon_right"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/file_icon_apk" />
    </RelativeLayout>

    <LinearLayout
        android:layout_marginTop="60dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_in"
            android:gravity="center_horizontal"
            android:textSize="26dp"
            android:textColor="@color/blue_pressed"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:layout_marginTop="40dp">

            <EditText
                android:id="@+id/et_username"
                android:layout_marginLeft="10dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="48dp"
                android:hint="@string/login_user"
                android:drawableLeft="@mipmap/ic_login_username_default"
                android:drawablePadding="10dp"
                android:maxLines="1"
                android:background="@android:color/transparent"
                android:textSize="16sp"
                android:inputType="textVisiblePassword"
                android:visibility="gone"/>
            <ImageButton
                android:id="@+id/delete_username"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:paddingRight="10dp"
                android:paddingLeft="20dp"
                android:src="@mipmap/ic_edittext_clear"
                android:visibility="gone"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_login_username_default"
                    android:layout_gravity="start|center_vertical"
                    android:paddingLeft="10dp"/>

                <Spinner
                    android:id="@+id/spinner_userno"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="48dp"
                    android:layout_gravity="right|center_vertical"/>

            </LinearLayout>

        </LinearLayout>

        <EditText
            android:id="@+id/et_password"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/login_input_pwd"
            android:drawableLeft="@mipmap/ic_login_password_default"
            android:drawablePadding="10dp"
            android:maxLines="1"
            android:maxLength="8"
            android:background="@android:color/transparent"
            android:textSize="16sp"
            android:inputType="textPassword"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/corner_btn"
        android:gravity="center"
        android:text="@string/login_in"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">
        <TextView
            android:id="@+id/tv_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10.0dp"
            android:gravity="center_horizontal|bottom"
            android:text="version"
            android:textColor="@color/gray"
            android:textSize="18.0sp" />
    </LinearLayout>


</LinearLayout>
